Validate URI in config
Validate URI in config for early error detection.